--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     border-left:1ch;
     font-family: Georgia;
     background-image: url("/media/BlueBlack.gif");
+    background-color: black;
 
 }
 main header{
